# fnv-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: consts.rs  hash_result.rs  lib.rs  macros.rs  tests.rs
src/algos/: Fnv1024.rs  Fnv128.rs  Fnv256.rs  Fnv32.rs  Fnv512.rs  Fnv64.rs  mod.rs
