[package]
name = "fnv_rs"
version = "0.3.0"
authors = ["Crypto-Spartan <accounts@cryptospartan.net>"]
edition = "2021"
rust-version = "1.61"
description = "Fowler–Noll–Vo hash function including 32, 64, 128, 256, 512, & 1024 bit variants."
readme = "README.md"
repository = "https://github.com/CryptoSpartan/fnv-rs"
license = "Apache-2.0 / MIT"
keywords = ["hash", "cryptography", "crypto", "algorithm", "library"]
categories = ["algorithms", "cryptography"]
homepage = "https://github.com/CryptoSpartan/fnv-rs"
documentation = "https://docs.rs/fnv-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint = "0.4.9"
hex = "0.4.3"
paste = "1.0"

#[lib]
#name = "fnv_rs"
#path = "src/lib.rs"

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1