[package]
name = "fnv_rs"
version = "0.4.9"
authors = ["Crypto-Spartan <accounts@cryptospartan.net>"]
edition = "2021"
rust-version = "1.68"
description = "Fowler–Noll–Vo hash function including 32, 64, 128, 256, 512, & 1024 bit variants."
readme = "README.md"
repository = "https://github.com/Crypto-Spartan/fnv-rs"
license = "Apache-2.0 / MIT"
keywords = ["hash", "cryptography", "crypto", "algorithm", "library"]
categories = ["algorithms", "cryptography"]
homepage = "https://github.com/Crypto-Spartan/fnv-rs"
documentation = "https://docs.rs/fnv-rs"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"
hex = "0.4.3"
crypto-bigint = { version = "0.6.1", optional = true }

[build-dependencies]
rustc_version = "0.4.0"

[features]
bigint = ["dep:crypto-bigint"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
